--- a/style.css
+++ b/style.css
@@ -15,6 +15,71 @@ body {
 	font-family: 'Merriweather', serif;
 }
 
+p {
+	font-size: 1rem;
+}
+
+.informations {
+	position: fixed;
+	/* top: 50%; */
+	left: 50%;
+	transform: translateY(-50%);
+	transform: translateX(-50%);
+	padding: 3rem;
+
+	background-color: var(--light);
+	color: var(--dark);
+	box-shadow: 0 0 60px 10px black;
+	border-radius: 10px;
+
+	display: none;
+}
+.informations h2 {
+	font-family: Copse, sans-serif;
+	color: var(--bold);
+	margin-bottom: 2rem;
+}
+.informations p {
+	margin: 1rem 0 0.5rem;
+}
+.informations input {
+	width: 100%;
+	padding: 0.5rem;
+	font-size: 1rem;
+
+	border: 1px solid var(--dark);
+	background-color: var(--light);
+	color: var(--dark);
+	border-radius: 5px;
+}
+.informations .buttons {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.informations button {
+	margin-top: 3rem;
+	width: 47%;
+	padding: 0.5rem;
+	font-family: 'Merriweather', serif;
+	font-size: 1rem;
+	cursor: pointer;
+
+	color: var(--bold);
+	border: 1px solid var(--dark);
+	border-radius: 5px;
+}
+.informations button:hover {
+	filter: brightness(1.3);
+}
+.informations button:first-of-type {
+	background-color: var(--bold);
+	color: var(--light);
+}
+.informations button:last-of-type {
+	background-color: var(--light);
+}
+
 header {
 	height: 5rem;
 	padding: 0 2rem;
@@ -34,4 +99,9 @@ header ul {
 header li {
 	float: left;
 	margin-left: 1rem;
+	cursor: pointer;
+}
+header li:hover {
+	color: var(--base);
+	transition: 0.2s color ease;
 }
